--- a/catalog/templates/template_formula.html
+++ b/catalog/templates/template_formula.html
@@ -1,5 +1,5 @@
 <div class="head">
-	<img src="content\logo.png">
+	{% comment %} <img src="content\logo.png"> {% endcomment %}
 </div>
 <body>
 	<h1> {{title}}</h1>
