--- a/catalog/templates/template_view.html
+++ b/catalog/templates/template_view.html
@@ -1,11 +1,11 @@
 <head>
-		{% load static %}
-	  <link rel="stylesheet" type="text/css" href="{%static 'chrobry/styles.css'%}">
+		{% comment %} {% load static %} {% endcomment %}
+	  {% comment %} <link rel="stylesheet" type="text/css" href="{%static 'chrobry/styles.css'%}"> {% endcomment %}
 </head>
 
 
 <div class="head">
-	<img src="{%static 'chrobry/logo.png'%}">
+	{% comment %} <img src="{%static 'chrobry/logo.png'%}"> {% endcomment %}
 </div>
 
 <body>
